# VideoManipulation

./: .gitignore  README.md  local.properties  settings.gradle
VideoManipulationOpenGL/: build.gradle
VideoManipulationOpenGL/src/main/: AndroidManifest.xml
VideoManipulationOpenGL/src/main/cpp/sample/: native-lib.cpp
VideoManipulationOpenGL/src/main/java/com/zemosolabs/mindhive/videomanipulation/activities/: Splash.java
VideoManipulationOpenGL/src/main/java/com/zemosolabs/mindhive/videomanipulation/custom_views/: CircularFrameLayout.java
VideoManipulationOpenGL/src/main/res/drawable/: player_control_drawable.xml
VideoManipulationOpenGL/src/main/res/layout/: activity_main.xml  activity_splash.xml
VideoManipulationOpenGL/src/main/res/raw/: fragment_shader.glsl  fragment_shader_default.glsl  vertex_shader.glsl
VideoManipulationOpenGL/src/main/res/values/: attrs.xml
VideoManipulationOpenGL/src/test/java/com/zemosolabs/mindhive/videomanipulation/: ExampleUnitTest.java
app/: .gitignore  build.gradle
app/src/androidTest/java/com/zemosolabs/mindhive/videomanipulation/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/video_process/: video-process.cpp
app/src/main/java/com/zemosolabs/mindhive/videomanipulation/: Splash.java  VideoApplication.java
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/raw/: fragment_shader.glsl
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
